--- a/index.html
+++ b/index.html
@@ -7,60 +7,69 @@
 <!-- Header -->
 <header>
     <nav>
-        <img src="asset/logo.png" alt="Logo UMKM" class="logo">
+        <img src="D:\rusli/foto/logo.jpg" alt="Logo UMKM" class="logo">
         <ul>
-            <li><a href="home">Home</a></li>
-            <li><a href="#products">Produk</a></li>
-            <li><a href="#contact">Tentang Kami</a></li>
-            <li><a href="#contact">Hubungi Kami</a></li>
+            <li><a href="#home"><h2>Home</h2></a></li>
+            <li><a href="#products"><h2>Produk</h2></a></li>
+            <li><a href="#contact"><h2>Tentang Kami</h2></a></li>
+            <li><a href="#contact"><h2>Hubungi Kami</h2></a></li>
         </ul>
-        <a href="#products" class="btn-order">Produk kami</a>
+        <a href="#products" class="btn-order"><h2>Produk kami</h2></a>
     <nav>
 </header>
 <!-- Hero Section -->
 <section id="hero">
     <div class="hero-content">
-        <h1>Gurihnya Kerupuk untuk Dunia</h1>
-        <p>Produk kerupuk berkualitas, dibuat dengan bahan-bahan organik tanpa pengawet</p>
-        <a href="https//:api.whatsapp.com/send?phone=62817220743&text=Hay%20kak%2c%20saya%20mau%20pesan" target="_blank"
-        class="btn-primary">Pesan Sekarang</a>
+        <h1>Mangan Enak,Weteng Wareg</h1>
+        <p><h2>Lauk yang dibuat dari bahan bahan alami dan higienis</h2></p>
+        <a href="https://api.whatsapp.com/send?phone=6281334892243&text=Halo%20Tuan%2c%20saya%20ingin%20pesan" target="_blank"
+        class="btn-primary"><h2>Pesan Sekarang</h2></a>
     </div>
-    <img src="asset/image-1.jpg" alt="Gambar Produk Unggulan" class="hero-image">
+    <img src="D:\rusli/foto/image-1.jpeg" alt="Gambar Produk Unggulan" class="hero-image">
 </section>
 <!-- Products Section -->
 <section id="products">
     <h2>Produk Unggulan Kami</h2>
     <div class="product-list">
         <div class="product">
-            <img src="asset/p-1.jpg" alt="Kerupuk Ikan">
-            <h3>Kerupuk Ikan</h3>
-            <p>Lezatnya Laut dalam Setiap Gigitan</p>
+            <img src="D:\rusli/foto/p-1.jpg" alt="Tempe Orek">
+            <h3>Tempe Orek</h3>
+            <p><h4>Lezatnya Tempe dalam Setiap Gigitan</h4></p>
         </div>
         <div class="product">
-            <img src="asset/p-2.jpg" alt="Kerupuk Bawang">
-            <h3>Kerupuk Bawang</h3>
-            <p>Gurihnya Bawang yang Menggoda</p>
+            <img src="D:\rusli/foto/p-2.jpg" alt="Opor Ayam">
+            <h3>Opor Ayam</h3>
+            <p><h4>Gurihnya Kuah Opor yang Menggoda</h4></p>
         </div>
         <div class="product">
-            <img src="asset/p-3.jpeg" alt="Kerupuk Udang">
-            <h3>Kerupuk Udang</h3>
-            <p>Sensasi Udang seperti pesta di mulut Anda</p>
+            <img src="D:\rusli/foto/p-3.jpeg" alt="Panggang atau Manyun">
+            <h3>Panggang atau Manyun</h3>
+            <p><h4>Daging yang Diasap Membuat Air Liur Mengalir Deras</h4></p>
         </div>
+        <div class="product">
+            <img src="D:\rusli/foto/p-4.jpg" alt="Telur Ceplok Balado">
+            <h3>Telur Ceplok Balado</h3>
+            <p><h4>Pedasnya Jadi Pingin Makan Lagi</h4></p>
     </div>
+    <div class="product">
+        <img src="D:\rusli/foto/p-5.jpg.jpg" alt="Megono">
+        <h3>Megono</h3>
+        <p><h4>Megononya Bikin Candu</h4></p>
+</div>
 </section>
 <!-- Testimoni Section -->
 <section id="testimonials">
     <h2>Apa Kata Pelanggan Kami</h2>
     <div class="testimonials">
         <div classs="testimonial">
-          <img src="asset/avatar-1.png" alt="Pelanggan">
-          <h4>Andi</h4>
-          <p>"Produk Kerupuk ini benar-benar luar biasa, Rasa dan kualitasnya terbaik"</p>
+          <img src="D:\rusli/foto/avatar-1.jpg" alt="Pelanggan">
+          <h2>Aris</h2>
+          <p><h3>"Saya Suka Makan disini benar-benar luar biasa, Rasa dan kualitasnya terbaik"</h3></p>
         </div>
         <div class="testimonial">
-          <img src="asset/avatar-2.png" alt="Pelanggan">
-          <h4>Susi</h4>
-          <p>"Kerupuk ini enak dan unik. Saya suka sekali!"</p>
+          <img src="D:\rusli/foto/avatar-2.jpg" alt="Pelanggan">
+          <h2>Melly</h2>
+          <p><h3>"Makanan disini enak dan.Saya suka sekali!!!"</h3></p>
         </div>
     </div>
 </section>
@@ -77,10 +86,11 @@
 <!-- Footer -->
 <footer>
     <div class="social-icons">
-        <a href="#"><img src="asset/ico-fb.png" alt="Facebook"></a>
-        <a href="#"><img src="asset/ico-ig.png" alt="Instagram"></a>
+        <a href="#"><img src="D:\rusli/foto/ico-fb.png" alt="Facebook"></a>
+        <a href="#"><img src="D:\rusli/foto/ico-ig.png" alt="Instagram"></a>
+        <a href="#"><img src="D:\rusli/foto/ico-tiktokk.png" alt="Tiktok"></a>
     </div>
-    <p>Alamat Toko: jl. Contoh No. 123, Kota Batang | Telepon: 0812-3456-7890</p>
-    <p>&copy; 2024 Sidomuncul. Semua Hak Dilindungi.</p>
+    <p>Alamat Warung:Jl Sigelap,Amongrogo, Kota Batang | Telepon: 0852-2989-9178</p>
+    <p>&copy; @2024 RusliKeren. Semua Hak Dilindungi.</p>
 </footer>
 <script src="script.js"></script>
